--- a/pages/price-list.html
+++ b/pages/price-list.html
@@ -328,10 +328,16 @@
 
 
                 <select class="list-input__select  select2 select2-defualt _edit-input" name="Единица измерения">
-                  <option value=""></option>
-                  <option value="метры"> метры</option>
-                  <option value="штуки">штуки</option>
-                  <option value="комплекты">комплекты</option>
+                  <option value="-">-</option>
+                  <option value="сотка">сотка</option>
+                  <option value="м²">м²</option>
+                  <option value="м³">м³</option>
+                  <option value="м.">м.</option>
+                  <option value="усл.">усл.</option>
+                  <option value="ед.">ед.</option>
+                  <option value="п.м.">п.м.</option>
+                  <option value="шт.">шт.</option>
+
                 </select>
 
               </div>
