--- a/pages/price-list.html
+++ b/pages/price-list.html
@@ -190,7 +190,7 @@
               <td><span class="_mat-category">Мат</span></td>
               <td class="">01232</td>
               <td class="sorting_1">Доски струганые половые</td>
-              <td>метры</td>
+              <td>м.</td>
               <td>10</td>
               <td><button type=" button" onclick='editPositionPriceList(event)' data-toggle="modal"
                   data-target="#modal-edit-position" class=" btn-edit"></button></td>
@@ -203,7 +203,7 @@
               <td><span class="_rab-category">Раб</span></td>
               <td class="">01132</td>
               <td class="sorting_1">Монтаж теплого пола</td>
-              <td>метры</td>
+              <td>м.</td>
               <td>20</td>
               <td><button type=" button" onclick='editPositionPriceList(event)' data-toggle="modal"
                   data-target="#modal-edit-position" class=" btn-edit"></button></td>
@@ -215,7 +215,7 @@
               <td><span class="_meh-category">Мех</span></td>
               <td class="">01232</td>
               <td class="sorting_1">Циклевальная машина</td>
-              <td>метры</td>
+              <td>м.</td>
               <td>40</td>
               <td><button type=" button" onclick='editPositionPriceList(event)' data-toggle="modal"
                   data-target="#modal-edit-position" class=" btn-edit"></button></td>
@@ -228,7 +228,7 @@
                 </span></td>
               <td class="">01232</td>
               <td class="sorting_1">Грузовая газель</td>
-              <td>метры</td>
+              <td>м.</td>
               <td>50</td>
               <td><button type=" button" onclick='editPositionPriceList(event)' data-toggle="modal"
                   data-target="#modal-edit-position" class=" btn-edit"></button></td>
@@ -240,8 +240,8 @@
 
         </table>
 
-        <button type="button" class="butt-plus  mt-3" data-toggle="modal"
-          data-target="#modal-create-position"><span>Позиция</span></button>
+        <button type="button" class="butt-plus  mt-3" data-toggle="modal" data-target="#modal-create-position"
+          onclick="clearInputPL()"><span>Позиция</span></button>
 
       </div>
 
@@ -299,7 +299,7 @@
 
   <script type="module" src="../src/assets/js/main.js"></script>
   <!-- Начало  Модлаьно  окно создание -->
-  <div class="modal fade" id="modal-create-position" data-modal-id style="display: none;" aria-hidden="true">
+  <div class="modal fade" id="modal-create-position" style="display: none;" aria-hidden="true">
     <div class="modal-dialog modal-lg">
       <div class="modal-content modal-custom">
         <div class="modal-custom__content">
