--- a/pages/clients.html
+++ b/pages/clients.html
@@ -255,31 +255,31 @@
 			<div class="modal-content modal-custom">
 				<form class="modal-custom__content">
 					<div class="modal-custom__title middle-title mb-3">Создание клиента</div>
-					<div class="user-info">
+					<div class="block-item">
 
-						<div class="user-info__item">
-							<div class="user-info__label">Ф.И.О</div>
-							<div class="user-info__contetn"><input autocomplete="off" type="text" name="Имя"
+						<div class="block-item__item">
+							<div class="block-item__label">Ф.И.О</div>
+							<div class="block-item__contetn"><input autocomplete="off" type="text" name="Имя"
 									data-error="Ошибка" placeholder="Введите Ф.И.О" class="input-default"></div>
 						</div>
-						<div class="user-info__item">
-							<div class="user-info__label">Адрес</div>
-							<div class="user-info__contetn"><input autocomplete="off" type="text" name="Адрес"
+						<div class="block-item__item">
+							<div class="block-item__label">Адрес</div>
+							<div class="block-item__contetn"><input autocomplete="off" type="text" name="Адрес"
 									data-error="Ошибка" placeholder="Введите Адрес" class="input-default"></div>
 						</div>
-						<div class="user-info__item">
-							<div class="user-info__label">Координаты</div>
-							<div class="user-info__contetn"><input autocomplete="off" type="text" name="Координаты"
+						<div class="block-item__item">
+							<div class="block-item__label">Координаты</div>
+							<div class="block-item__contetn"><input autocomplete="off" type="text" name="Координаты"
 									data-error="Ошибка" placeholder="Введите координаты" class="input-default"></div>
 						</div>
-						<div class="user-info__item">
-							<div class="user-info__label">Комментарии</div>
-							<div class="user-info__contetn"><textarea name="Комментарии" placeholder="Введите комментарии "
+						<div class="block-item__item">
+							<div class="block-item__label">Комментарии</div>
+							<div class="block-item__contetn"><textarea name="Комментарии" placeholder="Введите комментарии "
 									class="textarea-default"></textarea></div>
 						</div>
-						<div class="user-info__item">
-							<div class="user-info__label mb-0">Менеджер</div>
-							<div class="user-info__contetn">
+						<div class="block-item__item">
+							<div class="block-item__label mb-0">Менеджер</div>
+							<div class="block-item__contetn">
 								<select class="list-input__select  select2" multiple="multiple" name="Менеджер">
 									<option></option>
 									<option>Дмитрий</option>
@@ -289,9 +289,9 @@
 
 							</div>
 						</div>
-						<div class="user-info__item">
-							<div class="user-info__label mb-0">Инженер</div>
-							<div class="user-info__contetn">
+						<div class="block-item__item">
+							<div class="block-item__label mb-0">Инженер</div>
+							<div class="block-item__contetn">
 								<select class="list-input__select  select2" multiple="multiple" name="Инженер">
 									<option></option>
 									<option>Биба</option>
