--- a/pages/price-list.html
+++ b/pages/price-list.html
@@ -304,9 +304,9 @@
       <div class="modal-content modal-custom">
         <div class="modal-custom__content">
           <div class="modal-custom__title middle-title mb-3">Создание позиции</div>
-          <div class="user-info">
-            <div class="user-info__item">
-              <div class="user-info__label">Категория:</div>
+          <div class="block-item">
+            <div class="block-item__item">
+              <div class="block-item__label">Категория:</div>
               <div class="select2_category">
                 <select class="list-input__select  select2  select2-defualt _edit-input " name="Категория">
                   <option value=""></option>
@@ -318,14 +318,14 @@
               </div>
             </div>
 
-            <div class="user-info__item">
-              <div class="user-info__label">Имя позиции:</div>
-              <div class="user-info__contetn"><input autocomplete="off" type="text" name="Имя позиции"
+            <div class="block-item__item">
+              <div class="block-item__label">Имя позиции:</div>
+              <div class="block-item__contetn"><input autocomplete="off" type="text" name="Имя позиции"
                   data-error="Ошибка" placeholder="Введите имя позиции" class="input-default _edit-input"></div>
             </div>
-            <div class="user-info__item">
-              <div class="user-info__label">Единица измерения:</div>
-              <div class="user-info__contetn">
+            <div class="block-item__item">
+              <div class="block-item__label">Единица измерения:</div>
+              <div class="block-item__contetn">
 
 
                 <select class="list-input__select  select2 select2-defualt _edit-input" name="Единица измерения">
@@ -343,9 +343,9 @@
 
               </div>
             </div>
-            <div class="user-info__item">
-              <div class="user-info__label">Цена:</div>
-              <div class="user-info__contetn">
+            <div class="block-item__item">
+              <div class="block-item__label">Цена:</div>
+              <div class="block-item__contetn">
                 <input autocomplete="off" type="text" name="Цена" data-error="Ошибка" placeholder="Введите цену"
                   class="input-default _edit-input">
               </div>
@@ -370,9 +370,9 @@
       <div class="modal-content modal-custom">
         <div class="modal-custom__content">
           <div class="modal-custom__title middle-title mb-3">Редактирование позиции</div>
-          <div class="user-info">
-            <div class="user-info__item">
-              <div class="user-info__label">Категория:</div>
+          <div class="block-item">
+            <div class="block-item__item">
+              <div class="block-item__label">Категория:</div>
               <div class="select2_category">
                 <select class="list-input__select  select2  select2-defualt _edit-input " name="Категория">
                   <option value=""></option>
@@ -384,14 +384,14 @@
               </div>
             </div>
 
-            <div class="user-info__item">
-              <div class="user-info__label">Имя позиции:</div>
-              <div class="user-info__contetn"><input autocomplete="off" type="text" name="Имя позиции"
+            <div class="block-item__item">
+              <div class="block-item__label">Имя позиции:</div>
+              <div class="block-item__contetn"><input autocomplete="off" type="text" name="Имя позиции"
                   data-error="Ошибка" placeholder="Введите имя позиции" class="input-default _edit-input"></div>
             </div>
-            <div class="user-info__item">
-              <div class="user-info__label">Единица измерения:</div>
-              <div class="user-info__contetn">
+            <div class="block-item__item">
+              <div class="block-item__label">Единица измерения:</div>
+              <div class="block-item__contetn">
 
 
                 <select class="list-input__select  select2 select2-defualt _edit-input" name="Единица измерения">
@@ -409,9 +409,9 @@
 
               </div>
             </div>
-            <div class="user-info__item">
-              <div class="user-info__label">Цена:</div>
-              <div class="user-info__contetn">
+            <div class="block-item__item">
+              <div class="block-item__label">Цена:</div>
+              <div class="block-item__contetn">
                 <input autocomplete="off" type="text" name="Цена" data-error="Ошибка" placeholder="Введите цену"
                   class="input-default _edit-input">
               </div>
