--- a/pages/price-list.html
+++ b/pages/price-list.html
@@ -308,7 +308,7 @@
             <div class="block-item__item">
               <div class="block-item__label">Категория:</div>
               <div class="select2_category">
-                <select class="list-input__select  select2  select2-defualt _edit-input " name="Категория">
+                <select class="list-input__select  select2  select2-defualt _edit-input _validate" name="Категория">
                   <option value=""></option>
                   <option value="Мат">Мат</option>
                   <option value="Раб">Раб</option>
@@ -321,7 +321,7 @@
             <div class="block-item__item">
               <div class="block-item__label">Имя позиции:</div>
               <div class="block-item__contetn"><input autocomplete="off" type="text" name="Имя позиции"
-                  data-error="Ошибка" placeholder="Введите имя позиции" class="input-default _edit-input"></div>
+                  placeholder="Введите имя позиции" class="input-default _edit-input _validate"></div>
             </div>
             <div class="block-item__item">
               <div class="block-item__label">Единица измерения:</div>
@@ -346,8 +346,8 @@
             <div class="block-item__item">
               <div class="block-item__label">Цена:</div>
               <div class="block-item__contetn">
-                <input autocomplete="off" type="text" name="Цена" data-error="Ошибка" placeholder="Введите цену"
-                  class="input-default _edit-input">
+                <input autocomplete="off" type="text" name="Цена" placeholder="Введите цену"
+                  class="input-default _edit-input _validate">
               </div>
             </div>
 
@@ -387,7 +387,7 @@
             <div class="block-item__item">
               <div class="block-item__label">Имя позиции:</div>
               <div class="block-item__contetn"><input autocomplete="off" type="text" name="Имя позиции"
-                  data-error="Ошибка" placeholder="Введите имя позиции" class="input-default _edit-input"></div>
+                  placeholder="Введите имя позиции" class="input-default _edit-input"></div>
             </div>
             <div class="block-item__item">
               <div class="block-item__label">Единица измерения:</div>
@@ -412,7 +412,7 @@
             <div class="block-item__item">
               <div class="block-item__label">Цена:</div>
               <div class="block-item__contetn">
-                <input autocomplete="off" type="text" name="Цена" data-error="Ошибка" placeholder="Введите цену"
+                <input autocomplete="off" type="text" name="Цена" placeholder="Введите цену"
                   class="input-default _edit-input">
               </div>
             </div>
