--- a/pages/templates.html
+++ b/pages/templates.html
@@ -135,7 +135,7 @@
 					data-toggle="dropdown" aria-expanded="false">Создать
 				</button>
 				<div class="dropdown-menu" style="">
-					<button type="button" class="dropdown-item _icon-template">Шаблон</button>
+					<a href="./create-template.html" type="button" class="dropdown-item _icon-template">Шаблон</a>
 					<button type="button" class="dropdown-item _icon-folder">Папку</button>
 
 				</div>
