fix: поправил селект в создание сметы

--- a/pages/price-list.html
+++ b/pages/price-list.html
@@ -374,7 +374,7 @@
             <div class="block-item__item">
               <div class="block-item__label">Категория:</div>
               <div class="select2_category">
-                <select class="list-input__select  select2  select2-defualt _edit-input " name="Категория">
+                <select class="list-input__select  select2  select2-defualt _edit-input _validate" name="Категория">
                   <option value=""></option>
                   <option value="Мат">Мат</option>
                   <option value="Раб">Раб</option>
@@ -387,14 +387,15 @@
             <div class="block-item__item">
               <div class="block-item__label">Имя позиции:</div>
               <div class="block-item__contetn"><input autocomplete="off" type="text" name="Имя позиции"
-                  placeholder="Введите имя позиции" class="input-default _edit-input"></div>
+                  placeholder="Введите имя позиции" class="input-default _edit-input _validate"></div>
             </div>
             <div class="block-item__item">
               <div class="block-item__label">Единица измерения:</div>
               <div class="block-item__contetn">
 
 
-                <select class="list-input__select  select2 select2-defualt _edit-input" name="Единица измерения">
+                <select class="list-input__select  select2 select2-defualt _edit-input _validate"
+                  name="Единица измерения">
                   <option value="-">-</option>
                   <option value="сотка">сотка</option>
                   <option value="м²">м²</option>
@@ -413,7 +414,7 @@
               <div class="block-item__label">Цена:</div>
               <div class="block-item__contetn">
                 <input autocomplete="off" type="text" name="Цена" placeholder="Введите цену"
-                  class="input-default _edit-input">
+                  class="input-default _edit-input _validate">
               </div>
             </div>
 
